CSRF, validation, register and security

--- a/templates/author/create.html.twig
+++ b/templates/author/create.html.twig
@@ -6,9 +6,10 @@
 
     <h1>Create new Author ✅</h1>
     <form action="{{path('author_store')}}" method="POST">
-        Name:  <input type="text" name="author_name"> 
-        Surname:<input type="text" name="author_surname">
+        Name:  <input type="text" name="author_name" value="{{aname}}"> 
+        Surname:<input type="text" name="author_surname" value="{{asurname}}">
         <button type="submit"> Add new Author! </button>
+        <input type="hidden" name="token" value=""{{ csrf_token('create_author_bla')}}>
     </form>
 
 {% endblock %}
