--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,8 +9,13 @@
     </head>
     <body>
     {% if errors is defined and errors|length > 0 %}
-        {% include 'errors/validation.html.twig' %}
+        {% include 'message/validation.html.twig' %}
     {% endif %}
+
+     {% if success is defined and success|length > 0 %}
+        {% include 'message/success.html.twig' %}
+    {% endif %}
+    
         {% block body %}{% endblock %}
     </body>
 </html>
